<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:actionMenuTextColor="@color/colorPrimary"
            android:title="@string/home"
            android:visible="false" />
        <item
            android:id="@+id/nav_yourtrips"
            android:icon="@drawable/nav_history"
            android:actionMenuTextColor="@color/colorPrimary"
            android:title="@string/your_trips" />
        <item
            android:id="@+id/nav_wal"
            android:icon="@drawable/payment"
            android:actionMenuTextColor="@color/colorPrimary"
            android:title="@string/wallet" />
        <item
            android:id="@+id/nav_earnings"
            android:icon="@drawable/diagnostics"
            android:actionMenuTextColor="@color/colorPrimary"
            android:title="@string/earnings" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/summary"
            android:actionMenuTextColor="@color/colorPrimary"
            android:title="@string/summary" />
        <item
            android:id="@+id/nav_settings"
            android:actionMenuTextColor="@color/colorPrimary"
            android:visible="false"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/notification"
            android:icon="@drawable/notifications"
            android:actionMenuTextColor="@color/colorPrimary"
            android:visible="false"
            android:title="@string/notification" />
        <item
            android:id="@+id/referral"
            android:icon="@drawable/ticket"
            android:actionMenuTextColor="@color/colorPrimary"
            android:title="@string/referral" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/support"
            android:actionMenuTextColor="@color/colorPrimary"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share"
            android:actionMenuTextColor="@color/colorPrimary"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:actionMenuTextColor="@color/colorPrimary"
            android:title="@string/logout" />
    </group>

</menu>
