<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.DocumentStatusActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/text_color_white"
        android:elevation="@dimen/_5sdp">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:src="@drawable/back_icon" />

        <com.diff.provider.Utilities.MyBoldTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/status_for_field"
            android:textColor="@color/black_text_color"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@drawable/border"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <com.diff.provider.Utilities.MyBoldTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="@string/division"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.diff.provider.Utilities.MyBoldTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:padding="12dp"
                android:text="@string/status"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/document_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

    </LinearLayout>


</LinearLayout>