<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ServiceRequirementActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="8dp"
            android:src="@drawable/back_icon" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="Enter Car Details"
            android:textSize="@dimen/_16sdp" />


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_12sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.diff.provider.Utilities.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_model"
                        android:textColor="@color/black_text_color"
                        android:textSize="@dimen/_14sdp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.diff.provider.Utilities.MyEditText
                            android:id="@+id/service_model"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:hint="Produa Myvi"
                            android:textAlignment="viewStart"
                            android:textSize="@dimen/_14sdp" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.diff.provider.Utilities.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_type"
                        android:textColor="@color/black_text_color"
                        android:textSize="@dimen/_14sdp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/service_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_14sdp" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.diff.provider.Utilities.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_color"
                        android:textColor="@color/black_text_color"
                        android:textSize="@dimen/_14sdp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.diff.provider.Utilities.MyEditText
                            android:id="@+id/service_color"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:hint="Black"
                            android:textAlignment="viewStart"
                            android:textSize="@dimen/_14sdp" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.diff.provider.Utilities.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_manufacturing_year"
                        android:textColor="@color/black_text_color"
                        android:textSize="@dimen/_14sdp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.diff.provider.Utilities.MyEditText
                            android:id="@+id/service_year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLines="1"
                            android:digits="0123456789"
                            android:hint="2000"
                            android:maxLength="4"
                            android:textAlignment="viewStart"
                            android:textSize="@dimen/_14sdp" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.diff.provider.Utilities.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_seater"
                        android:textColor="@color/black_text_color"
                        android:textSize="@dimen/_14sdp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.diff.provider.Utilities.MyEditText
                            android:id="@+id/service_seater"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLines="1"
                            android:hint="@string/exclude_driver_seat"
                            android:textAlignment="viewStart"
                            android:textSize="@dimen/_14sdp" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.diff.provider.Utilities.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_registration_number"
                        android:textColor="@color/black_text_color"
                        android:textSize="@dimen/_14sdp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.diff.provider.Utilities.MyEditText
                            android:id="@+id/service_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:hint="ABC 1234"
                            android:textAlignment="viewStart"
                            android:textSize="@dimen/_14sdp" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/nextIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_arrow_right"
        app:backgroundTint="@color/colorPrimary" />

</android.support.design.widget.CoordinatorLayout>